# ptbrush

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml.examlpe  debug_db.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
ptbrush/: db.py  main.py  qbittorrent.py
ptbrush/config/: config.py
ptbrush/ptsite/: mteam.py
ptbrush/tasks/: __init__.py  services.py
ptbrush/web/: routes.py
ptbrush/web/templates/: base.html  config.html  dashboard.html  index.html  state.html
