[project]
name = "ptbrush"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.7.0",
    "qbittorrent-api>=2024.10.68",
    "apscheduler>=3.10.4",
    "flask-cors>=5.0.0",
    "loguru>=0.7.2",
    "peewee>=3.17.8",
    "requests>=2.32.3",
    "click>=8.1.7",
    "flask>=3.1.0",
    "tomlkit>=0.13.3",
    "jsonpath-ng>=1.6.0",
]
